# apix

./: Cargo.toml  README.md  z-run.sh
data/: Dockerfile  Dockerfile.txt  startup.sh
influx/: Dockerfile  reader.py  writer.py
mongoRust/: Cargo.toml
mongoRust/src/: main.rs
webRust/: Cargo.toml  Dockerfile
webRust/src/: main.rs
worker/: Dockerfile  mongo_server.py
