[package]
name = "mongoRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.7.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1", features = ["full"] }
chrono = "0.4" 
serde = "1" # Used in the Map Data into Structs section

[profile.release]
opt-level = 3
